<?xml version="1.0"?>
<package format="2">
  <name>pca9685_ros_driver</name>
  <version>0.0.0</version>
  <description>The pca9685_ros_driver package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="strom@todo.todo">strom</maintainer>

  <license>MIT</license>
  <url type="website">http://vortexntnu.no</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>vortex_msgs</build_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>vortex_msgs</exec_depend>
</package>
